--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "donode",
   "version": "0.0.1",
-  "description": "RESTful Node.js framework",
+  "description": "Superfast & Lightweight node framework for building RESTful APIs.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/madhusudhand/donode.git"
+    "url": "git+https://github.com/donode/donode.git"
   },
   "keywords": [
     "node",
@@ -18,9 +18,9 @@
   "author": "Madhusudana Rao Dollu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/madhusudhand/donode/issues"
+    "url": "https://github.com/donode/donode/issues"
   },
-  "homepage": "https://github.com/madhusudhand/donode#readme",
+  "homepage": "https://github.com/donode/donode#readme",
   "dependencies": {
     "export-files": "^2.1.1",
     "querystring": "^0.2.0"
