--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/donode/donode#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "export-files": "^2.1.1",
     "querystring": "^0.2.0"
   },
