--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/donode/donode#readme",
   "dependencies": {
     "chalk": "^1.1.3",
-    "export-files": "^2.1.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "require-directory": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^3.13.1"
