--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Super fast & Lightweight node framework to build RESTful APIs.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -w",
+    "start": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
