--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "donode",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.0-beta.5",
   "description": "Super fast & Lightweight node framework to build RESTful APIs.",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "querystring": "^0.2.0",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "serve-static": "^1.12.3"
   },
   "devDependencies": {
     "eslint": "^3.13.1"
