--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/donode/donode#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "cookie": "^0.3.1",
     "querystring": "^0.2.0",
     "require-directory": "^2.1.1",
     "serve-static": "^1.12.3"
